--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.resume-box:after,
+.resume-box:before {
+  bottom: 100%;
+
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.resume-box:after {
+  border-color: rgba(238, 238, 238, 0);
+  border-bottom-color: #000000;
+  border-width: 4px;
+  margin-left: -4px;
+}
+.resume-box:before {
+  border-color: rgba(204, 204, 204, 0);
+  border-bottom-color: #000000;
+  border-width: 5px;
+  margin-left: -5px;
+}
+.bgWrap {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  z-index: -1;
+}
